--- a/pack.yaml
+++ b/pack.yaml
@@ -7,14 +7,8 @@ keywords:
     -  ops
     -  monitoring
 stackstorm_version: ">=3.0.1"
-version: v0.9.0
+version: 0.9.0
 author: Syncurity
-email: support@syncurity.net
+email: jp@stackstorm.com
 python version:
-  - "2"
   - "3"
-contributors:
-  - JP Bourget <jp@syncurity.net>
-  - Ryan Markle <rmarkle@syncurity.net>
-  - Brian Tackett <btackett@syncurity.net>
-  - Alex Schieppati <alex@syncurity.net>
