move trigger to wf

--- a/actions/warn_used_disk_space.yaml
+++ b/actions/warn_used_disk_space.yaml
@@ -10,3 +10,8 @@ parameters:
         description: "Path to folder to check"
         required: true
         position: 0
+    disk_space_threshold:
+        type: "integer"
+        description: "Diskspace usage threshold"
+        required: true
+        position: 1
