--- a/actions/workflows/warn_used_disk_space.yaml
+++ b/actions/workflows/warn_used_disk_space.yaml
@@ -3,6 +3,8 @@ version: 1.0
 input:
   - path
   - disk_space_threshold
+  - from
+  - to
 
 tasks:
 
@@ -27,8 +29,8 @@ tasks:
   send_email:
     action: core.sendmail
     input:
-      from: "stanley@stackstorm.org"
-      to: "stanley@stackstorm.org"
+      from: <% ctx().from %>
+      to: <% ctx().to %>
       subject: "Alert: StackStorm Server High Disk Usage"
       body: "Your StackStorm server has following amount of disk space in use: {{ ctx().used_disk_space }}"
       send_empty_body: "yes"
