readme and timer

--- a/rules/timer_check_disk_space.yaml
+++ b/rules/timer_check_disk_space.yaml
@@ -8,8 +8,8 @@ enabled: true
 trigger:
   type: "core.st2.IntervalTimer"
   parameters:
-    unit: "minutes"
-    delta: 1
+    unit: "hours"
+    delta: 4
 
 action:
   ref: "st2_watcher.warn_used_disk_space"
