--- a/rules/failed_sensor_notice.yaml
+++ b/rules/failed_sensor_notice.yaml
@@ -1,7 +1,7 @@
 ---
 
 name: "failed_sensor_notice"
-pack: "cloudy"
+pack: "st2_watcher"
 description: "Email Notification for Sensor Failures"
 enabled: true
 
